Fix alignment

--- a/main.css
+++ b/main.css
@@ -118,7 +118,7 @@ main#main-page {
     background: rgba(77, 89, 149, 0.06);
 }
 #user-dropdown-menu {
-    margin-top: 15px;
+    margin-top: 9px;
     -webkit-box-shadow: 0px 0px 50px 0px rgb(82 63 105 / 15%);
     box-shadow: 0px 0px 50px 0px rgb(82 63 105 / 15%);
     border-radius: 5px;
